--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
       <div class="card">
         <div class="intro">Don't be shy, Let's have a talk!</div>
         <div class="btns">
-          <button><a href="#">Github</a></button>
-          <button><a href="#">Instagram</a></button>
-          <button><a href="#">Mail</a></button>
+          <button><a href="https://github.com/schoolop08">Github</a></button>
+          <button><a href="https://www.instagram.com/opsahoo08/">Instagram</a></button>
+          <button><a href="mailto:opsahoo08@gmail.com">Mail</a></button>
         </div>
       </div>
     </div>
