--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
       <div class="card">
         <div class="intro">Don't be shy, Let's have a talk!</div>
         <div class="btns">
-          <button><a href="https://github.com/schoolop08">Github</a></button>
-          <button><a href="https://www.instagram.com/opsahoo08/">Instagram</a></button>
-          <button><a href="mailto:opsahoo08@gmail.com">Mail</a></button>
+          <button><a href="https://github.com/schoolop08"><img src="https://skillicons.dev/icons?i=git" />@opsahoo08</a></button>
+          <button><a href="https://www.instagram.com/opsahoo08/">Instagram</a><img src="https://skillicons.dev/icons?i=instagram" />@opsahoo08</button>
+          <button><a href="mailto:opsahoo08@gmail.com"><img src="https://skillicons.dev/icons?i=gmail" />opsahoo08@gmail.com</a></button>
         </div>
       </div>
     </div>
