--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>OPS</title>
   </head>
   <body>
-    <div class="crsr">👦</div>
+    <div class="crsr">👨🏾‍🦱</div>
     <div class="nav">
       <div class="name">
         <h4><b>O</b>m <b>P</b>rakash <b>S</b>ahoo</h4>
@@ -56,9 +56,25 @@
       <div class="card">
         <div class="intro">Don't be shy, Let's have a talk!</div>
         <div class="btns">
-          <button><a href="https://github.com/schoolop08"><img src="https://skillicons.dev/icons?i=git" />@opsahoo08</a></button>
-          <button><a href="https://www.instagram.com/opsahoo08/"><img src="https://skillicons.dev/icons?i=instagram" />@opsahoo08</a></button>
-          <button><a href="mailto:opsahoo08@gmail.com"><img src="https://skillicons.dev/icons?i=gmail" />opsahoo08@gmail.com</a></button>
+          <button>
+            <a href="https://github.com/schoolop08"
+              ><img src="https://skillicons.dev/icons?i=git" />@opsahoo08</a
+            >
+          </button>
+          <button>
+            <a href="https://www.instagram.com/opsahoo08/"
+              ><img
+                src="https://skillicons.dev/icons?i=instagram"
+              />@opsahoo08</a
+            >
+          </button>
+          <button>
+            <a href="mailto:opsahoo08@gmail.com"
+              ><img
+                src="https://skillicons.dev/icons?i=gmail"
+              />opsahoo08@gmail.com</a
+            >
+          </button>
         </div>
       </div>
     </div>
