--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>OPS</title>
   </head>
   <body>
-    <div class="crsr">👨🏾‍🦱</div>
+    <div class="crsr">👦</div>
     <div class="nav">
       <div class="name">
         <h4><b>O</b>m <b>P</b>rakash <b>S</b>ahoo</h4>
