--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </div>
       <div id="propg" class="propg">
         <div class="card">
-          <h1 font-size>New Projects Soon...</h1>
+          <h1>New Projects Comming Soon...</h1>
         </div>
       </div>
       <div id="pg2" class="pg2">
@@ -60,22 +60,20 @@
           <div class="intro">Don't be shy, Let's have a talk!</div>
           <div class="btns">
             <button>
-              <a href="https://github.com/schoolop08"
-                ><img src="https://skillicons.dev/icons?i=git" />@opsahoo08</a
+              <a href="https://github.com/schoolop08" target="_blank"
+                ><img src="https://skillicons.dev/icons?i=github" />Github</a
               >
             </button>
             <button>
-              <a href="https://www.instagram.com/opsahoo08/"
+              <a href="https://www.instagram.com/opsahoo08/" target="_blank"
                 ><img
                   src="https://skillicons.dev/icons?i=instagram"
-                />@opsahoo08</a
+                />Instagram</a
               >
             </button>
             <button>
-              <a href="mailto:opsahoo08@gmail.com"
-                ><img
-                  src="https://skillicons.dev/icons?i=gmail"
-                />opsahoo08@gmail.com</a
+              <a href="mailto:opsahoo08@gmail.com" target="_blank"
+                ><img src="https://skillicons.dev/icons?i=gmail" />gMail</a
               >
             </button>
           </div>
