--- a/index.html
+++ b/index.html
@@ -82,6 +82,14 @@
             </div>
           </div>
         </div>
+        <div id="propg" class="propg">
+          <div class="card">
+            <h1>
+              Thank You for Visiting! <br />
+              Radhe Radhe 🙏
+            </h1>
+          </div>
+        </div>
       </div>
 
       <svg
