--- a/index.html
+++ b/index.html
@@ -84,10 +84,7 @@
         </div>
         <div id="propg" class="propg">
           <div class="card">
-            <h1>
-              Thank You for Visiting! <br />
-              Radhe Radhe 🙏
-            </h1>
+            <h1>Radhe Radhe 🙏</h1>
           </div>
         </div>
       </div>
