--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
           </div>
           <div id="propg" class="propg">
             <div class="card">
-              <h1>New Projects Comming Soon...</h1>
+              <a href="pomodoro.html">
+                <h1>POMODORO TIMER</h1>
+              </a>
             </div>
           </div>
           <div id="pg2" class="pg2">
