--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <h4><b>O</b>m <b>P</b>rakash <b>S</b>ahoo</h4>
         </div>
         <div class="menu">
-          <button><a href="#propg">Projects</a></button>
+          <button><a href="#propg">Tools</a></button>
           <button><a href="#pg2">Contact</a></button>
         </div>
       </div>
