--- a/pomodoro.html
+++ b/pomodoro.html
@@ -22,26 +22,27 @@
 
       body,
       html {
-        height: 100vh;
+        min-height: 100vh;
         width: 100%;
         background: #171717;
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
+        overflow-x: hidden;
       }
 
       /* Timer Container */
       #timer {
+        width: 100vw;
+        height: 100vh;
         text-align: center;
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-content: center;
         padding: 30px;
-        background-color: #ffffff1c;
-        border: #ffffff1c 1px solid;
         backdrop-filter: blur(20px);
-        border-radius: 30px;
-        width: 300px;
         color: #dfdfdf;
       }
 
@@ -57,8 +58,11 @@
         color: #dfdfdf;
       }
 
-      button {
-        width: 100%;
+      a {
+        width: 50%;
+      }
+
+      a button {
         padding: 10px 20px;
         font-size: 1.2rem;
         cursor: pointer;
@@ -71,24 +75,65 @@
         transition: transform 0.3s ease;
       }
 
+      button {
+        width: 30%;
+        padding: 10px 20px;
+        font-size: 1.2rem;
+        cursor: pointer;
+        margin: 5px;
+        background-color: transparent;
+        border: none;
+        border-radius: 10px;
+        color: #dfdfdf;
+        background-color: #535353;
+        transition: transform 0.3s ease;
+      }
+
       button:hover {
         transform: scale(1.1);
       }
 
       /* Background transition based on Pomodoro state */
       body.pomodoro {
-        background-color: #821a17; /* Red for Pomodoro work */
+        background-color: #571307; /* Red for Pomodoro work */
         transition: background-color 0.5s ease;
       }
 
       body.short-break {
-        background-color: #5c6c14; /* Green for short break */
+        background-color: #575407; /* Green for short break */
         transition: background-color 0.5s ease;
       }
 
       body.long-break {
-        background-color: #126911; /* Light green for long break */
+        background-color: #1e5707; /* Light green for long break */
         transition: background-color 0.5s ease;
+      }
+
+      /* How To Section */
+      #how-to {
+        margin: 10vh 0;
+        width: 100%;
+        max-width: 800px;
+        background-color: #ffffff1c;
+        border: #ffffff1c 1px solid;
+        backdrop-filter: blur(20px);
+        border-radius: 30px;
+        padding: 30px;
+        color: #dfdfdf;
+        text-align: justify;
+      }
+
+      #how-to h2 {
+        font-size: 2.5rem;
+        color: #ffd52b;
+        margin-bottom: 20px;
+        text-align: center;
+      }
+
+      #how-to p {
+        font-size: 1.2rem;
+        line-height: 1.6;
+        color: #dfdfdf;
       }
     </style>
   </head>
@@ -96,8 +141,31 @@
     <div id="timer">
       <h1 id="display">25:00</h1>
       <p>Pomodoro Cycle Count: <span id="cycle-count">0</span></p>
-      <button onclick="startPomodoro()">Start</button>
+      <button onclick="startPomodoro()">Start Pomodoro Cycle</button>
       <button onclick="resetTimer()">Reset</button>
+      <a href="#how-to"><button>How?</button></a>
+    </div>
+
+    <!-- How To Section -->
+    <div id="how-to">
+      <h2>How to Use the Pomodoro Timer?</h2>
+      <p>
+        The Pomodoro technique helps boost productivity by working in intervals
+        of 25 minutes followed by short breaks.
+      </p>
+      <p><b>Steps:</b></p>
+      <p>
+        1. Click "Start Pomodoro Cycle" to begin a 25-minute focused work
+        session.
+      </p>
+      <p>
+        2. After 25 minutes, take a short 5-minute break. The timer will
+        automatically switch to this break.
+      </p>
+      <p>
+        3. Every 4 Pomodoros (work sessions), take a longer 15-minute break.
+      </p>
+      <p>4. You can reset the cycle anytime by clicking the "Reset" button.</p>
     </div>
 
     <script>
