--- a/pomodoro.html
+++ b/pomodoro.html
@@ -141,7 +141,7 @@
     <div id="timer">
       <h1 id="display">25:00</h1>
       <p>Pomodoro Cycle Count: <span id="cycle-count">0</span></p>
-      <button onclick="startPomodoro()">Start Pomodoro Cycle</button>
+      <button onclick="startPomodoro()">Start</button>
       <button onclick="resetTimer()">Reset</button>
       <a href="#how-to"><button>How?</button></a>
     </div>
